--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <hr>     
     <ul>
         <li>Lesson 01</li>
-        <li>Lesson 02</li>
+        <li><a href="lesson2/design-principles.html"></a>Design Principles </li>
         <li>Lesson 03</li>
         <li>Lesson 04</li>
         <li>Lesson 05</li>
