--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="css/normalize.css">
     <title>Assignment Portal</title>
   </head>
   <body>
@@ -27,7 +27,9 @@
     <h3>Delta</h3>
     <a href="https://www.delta.com/">delta.com</a>
     <img src="images/repetition.png" alt="picture of a repetition" />
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia eaque ex nisi, consequatur voluptatem error laboriosam dolorum autem doloribus, quo dolore nostrum similique pariatur delectus cumque illum dolores rerum! Deleniti perspiciatis aliquam numquam et. Cupiditate nisi et suscipit laborum fugit repellendus molestiae, dolorum alias earum corrupti. Fuga eum quae natus.</p>
+    <p>Delta is a layout for each page that follows the a similar structure with a header, main content area, and footer. Further reinforcing 
+      the sense of repetition and consistency.
+    </p>
     </div>
 
     <div >
@@ -37,7 +39,9 @@
         <h3>Apple</h3>
         <a href="https://www.apple.com/">apple.com</a>
         <img src="images/contrast.png" alt="picture for a contrast" />
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi beatae numquam officia animi tempora magnam id labore perferendis veniam non exercitationem eveniet, harum tenetur consequuntur vitae fugiat recusandae nostrum maiores at consectetur asperiores? Exercitationem consequuntur molestiae ut? Dolorem, delectus. Tempore saepe corrupti cupiditate architecto, sunt earum obcaecati maiores delectus sit.</p>
+        <p> Apple uses a high contrast color scheme with bold white text on a black background, and large images.
+        The layout enhances readability and highlights key information. Additionally, they use different font sizes and styles. 
+           It makes it easier to navigate the page and find what they are looking for.</p>
         </div>
 
         <div >
@@ -47,7 +51,10 @@
             <h3>Squarespace</h3>
             <a href="https://www.squarespace.com">squarespace.com</a>
             <img src="images/clean-design.png" alt="picture for a clean design" />
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error debitis molestias quibusdam dolor accusamus facere ullam consequuntur inventore maxime dolorum aliquam sequi impedit consequatur laudantium, expedita illum dolorem voluptatem dolores fugit voluptates nihil provident vel officia odit. Rerum, perferendis quae! Repellendus ipsum, minus numquam doloribus magni laboriosam nulla molestias quas.</p>
+            <p>The page features a minimalistic and clean design with lots of breathing room between elements, allowing the content to stand out and be easily digestible for the user.
+              they use of a simple color palette, with mainly black and white tones, and a consistent typography style. 
+              This design principle helps to create a sense of elegance and sophistication, while also improving the overall user experience by reducing clutter and creating a more visually appealing layout.
+            </p>
             </div>
     
     </main>
