--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <body>
     <header class="header-content">
       <div class="name">
-      <h1>Erick Patino</h1>
-    </div>
+        <h1>Erick Patino</h1>
+      </div>
       <div class="image">
         <img src="images/picture_er.jpg" alt="picture for my portal" />
       </div>
     </header>
-    <main class="list" >
-    <h2>WDD 230: Assignment Portal</h2>
-    <hr>     
-    <ul>
+    <main class="list">
+      <h2>WDD 230: Assignment Portal</h2>
+      <hr />
+      <ul>
         <li>Lesson 01</li>
         <li><a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03</li>
@@ -32,20 +32,19 @@
         <li>Lesson 09</li>
         <li>Lesson 10</li>
         <li>Lesson 11</li>
-
       </ul>
-      <hr> 
+      <hr />
       <p>Some lessons may need more than one activity/assigment link.</p>
     </main>
     <footer>
       <div class="footer-container">
-       <p>&copy; 2023 .:|:. Erick Patino .:|:.  Utah</p>
-       <p>Last Updated: 
-       <span id="date-time"></span>
-      </p>
-    </div>
+        <p>&copy; 2023 .:|:. Erick Patino .:|:. Utah</p>
+        <p>
+          Last Updated:
+          <span id="date-time"></span>
+        </p>
+      </div>
     </footer>
     <script src="script/script.js"></script>
   </body>
-
 </html>
