--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This will be the page where I will link all my assigment the the class of WDD230"
+    />
+
     <link rel="stylesheet" href="style/style.css" />
 
     <title>Assignment Portal</title>
