--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </main>
     <footer>
       <div class="footer-container">
-        <p>&copy; 2023 .:|:. Erick Patino .:|:. Utah</p>
+        <p>&copy <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
         <p>
           Last Updated:
           <span id="date-time"></span>
