--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="This page is for anybody with needed"
     />
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
@@ -35,7 +36,7 @@
      
       </section>
         <h3>Logo</h3>
-        <p><img src="images/logo-chamber-commerce.png" alt="Logo" /></p>
+        <span><img src="images/logo-chamber-commerce.png" alt="Logo" /></span>
       
     </main>
 
