--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Chamber of Commerce</title>
     <meta name="description" content="This page is for anybody with needed" />
+    <link rel="stylesheet" href="css/style.css">
+
   </head>
 
   <body>
@@ -20,12 +22,9 @@
     </header>
 
     <main>
-      <h3>Target audience</h3>
-      <ul>
-        <li>Local business</li>
-        <li>Local government officials</li>
-        <li>Proffesionals</li>
-      </ul>
+      <h2>Target audience</h2>
+     <p>The target audience for a chamber of commerce includes business owners, startups, government agencies, professionals, and community leaders. 
+        The chamber of commerce provides networking opportunities, resources and advocacy efforts to support the interests of businesses in the community.</p>
     </main>
 
     <footer>
