--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul>
         <li>Lesson 01</li>
         <li><a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Lesson 03</li>
+        <li><a href="lesson3/index.html">The Wild River Commerce</a></li>
         <li>Lesson 04</li>
         <li>Lesson 05</li>
         <li>Lesson 06</li>
