--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" >
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
     <title>Assignment Portal</title>
   </head>
   <body>
@@ -20,53 +26,63 @@
       <h1>Erick Patino</h1>
     </header>
     <main>
-    <div >
-    <section>
-    <h2>Repetition</h2>
-    </section>
-    <h3>Delta</h3>
-    <a href="https://www.delta.com/">delta.com</a>
-    <img src="images/repetition.png" alt="picture of a repetition" />
-    <p>Delta is a layout for each page that follows the a similar structure with a header, main content area, and footer. Further reinforcing 
-      the sense of repetition and consistency.
-    </p>
-    </div>
-
-    <div >
+      <div>
         <section>
-        <h2>Contrast</h2>
+          <h2>Repetition</h2>
+        </section>
+        <h3>Delta</h3>
+        <a href="https://www.delta.com/">delta.com</a>
+        <img src="images/repetition.png" alt="picture of a repetition" />
+        <p>
+          Delta is a layout for each page that follows the a similar structure
+          with a header, main content area, and footer. Further reinforcing the
+          sense of repetition and consistency.
+        </p>
+      </div>
+
+      <div>
+        <section>
+          <h2>Contrast</h2>
         </section>
         <h3>Apple</h3>
         <a href="https://www.apple.com/">apple.com</a>
         <img src="images/contrast.png" alt="picture for a contrast" />
-        <p> Apple uses a high contrast color scheme with bold white text on a black background, and large images.
-        The layout enhances readability and highlights key information. Additionally, they use different font sizes and styles. 
-           It makes it easier to navigate the page and find what they are looking for.</p>
-        </div>
+        <p>
+          Apple uses a high contrast color scheme with bold white text on a
+          black background, and large images. The layout enhances readability
+          and highlights key information. Additionally, they use different font
+          sizes and styles. It makes it easier to navigate the page and find
+          what they are looking for.
+        </p>
+      </div>
 
-        <div >
-            <section>
-            <h2>White Space and Clean Design</h2>
-            </section>
-            <h3>Squarespace</h3>
-            <a href="https://www.squarespace.com">squarespace.com</a>
-            <img src="images/clean-design.png" alt="picture for a clean design" />
-            <p>The page features a minimalistic and clean design with lots of breathing room between elements, allowing the content to stand out and be easily digestible for the user.
-              they use of a simple color palette, with mainly black and white tones, and a consistent typography style. 
-              This design principle helps to create a sense of elegance and sophistication, while also improving the overall user experience by reducing clutter and creating a more visually appealing layout.
-            </p>
-            </div>
-    
+      <div>
+        <section>
+          <h2>White Space and Clean Design</h2>
+        </section>
+        <h3>Squarespace</h3>
+        <a href="https://www.squarespace.com">squarespace.com</a>
+        <img src="images/clean-design.png" alt="picture for a clean design" />
+        <p>
+          The page features a minimalistic and clean design with lots of
+          breathing room between elements, allowing the content to stand out and
+          be easily digestible for the user. they use of a simple color palette,
+          with mainly black and white tones, and a consistent typography style.
+          This design principle helps to create a sense of elegance and
+          sophistication, while also improving the overall user experience by
+          reducing clutter and creating a more visually appealing layout.
+        </p>
+      </div>
     </main>
     <footer>
       <div class="footer-container">
-       <p>&copy; 2023 .:|:. Erick Patino .:|:.  Utah</p>
-       <p>Last Updated: 
-       <span id="date-time"></span>
-    </p>
-    </div>
+        <p>&copy; 2023 .:|:. Erick Patino .:|:. Utah</p>
+        <p>
+          Last Updated:
+          <span id="date-time"></span>
+        </p>
+      </div>
     </footer>
-    <script src=js/script.js></script>
+    <script src="js/script.js"></script>
   </body>
-
 </html>
