--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Chamber of Commerce</title>
     <meta name="description" content="This page is for anybody with needed" />
-    <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
       <h1>The Wild River Chamber</h1>
+
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -22,20 +22,90 @@
     </header>
 
     <main>
-      <h2>Target audience</h2>
-     <p>The target audience for a chamber of commerce includes business owners, startups, government agencies, professionals, and community leaders. 
-        The chamber of commerce provides networking opportunities, resources and advocacy efforts to support the interests of businesses in the community.</p>
+      <h2>Personas</h2>
+      <p>
+        Small Business Owner Sarah: Demographics: Female, 40 years old, married
+        with children. Business Profile: Owns a local boutique clothing store.
+        Goals and Challenges: Sarah aims to increase foot traffic and sales at
+        her store, build brand awareness, and find cost-effective marketing
+        solutions. She faces challenges in competing with larger retail chains
+        and staying updated on industry trends. Needs and Interests: Sarah is
+        interested in networking with other local business owners, accessing
+        business resources and training, and participating in community events
+        to promote her store. Behaviors: Sarah actively engages on social media
+        platforms, attends local business workshops, and values personal
+        connections and recommendations from other business owners.
+      </p>
+      <p>
+        Entrepreneur Evan: Demographics: Male, 28 years old, single. Business
+        Profile: Founder of a tech startup. Goals and Challenges: Evan aims to
+        secure funding for his startup, connect with potential investors and
+        mentors, and gain exposure in the tech industry. He faces challenges in
+        navigating the startup ecosystem, accessing funding opportunities, and
+        finding suitable office space. Needs and Interests: Evan is interested
+        in networking events that connect him with investors and mentors,
+        mentorship programs, and resources on business planning, funding, and
+        scaling his startup. Behaviors: Evan actively attends startup
+        conferences and pitch competitions, engages with entrepreneurship
+        communities online, and seeks out opportunities to showcase his
+        innovative ideas.
+      </p>
+      <h2>Target Audience</h2>
+      <p>
+        The target audience for a chamber of commerce includes business owners,
+        startups, government agencies, professionals, and community leaders. The
+        chamber of commerce provides networking opportunities, resources and
+        advocacy efforts to support the interests of businesses in the
+        community.
+      </p>
+
+      <h2>Scenarios</h2>
+      <p>
+        The Chamber of Commerce organizes a series of workshops covering
+        essential business topics such as marketing strategies, financial
+        management, and digital transformation. Local businesses can attend
+        these workshops to gain valuable insights and practical knowledge to
+        enhance their operations and competitiveness.
+      </p>
+      <p>
+        The Chamber of Commerce hosts a monthly after-hours networking event at
+        a local venue. Business professionals from various industries come
+        together to network, exchange ideas, and explore potential collaboration
+        opportunities in a relaxed and social atmosphere.
+      </p>
+      <p>
+        The Chamber of Commerce launches an economic development initiative
+        aimed at attracting new businesses to the region. They collaborate with
+        local government entities, real estate agents, and industry associations
+        to promote the area's benefits, infrastructure, and investment
+        opportunities, ultimately driving economic growth and job creation.
+      </p>
+      <p>
+        The Chamber of Commerce organizes an annual awards ceremony to recognize
+        and celebrate outstanding businesses in the community. Categories may
+        include Best Small Business, Innovative Startup, Customer Service
+        Excellence, and Sustainability Champion. The awards showcase business
+        success stories and inspire others while highlighting the positive
+        impact of entrepreneurship.
+      </p>
+      <p>
+        The Chamber of Commerce launches a shop local campaign, encouraging
+        residents to support local businesses. They collaborate with local
+        merchants to offer exclusive discounts, loyalty programs, and special
+        events, while implementing a marketing campaign that emphasizes the
+        economic, social, and environmental benefits of shopping locally. The
+        initiative aims to boost local businesses' sales, retain community
+        spending, and foster a vibrant and resilient local economy.
+      </p>
     </main>
 
     <footer>
-      <div class="footer-container">
-        <p>&copy <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
-        <p>
-          Last Updated:
-          <span id="date-time"></span>
-        </p>
-      </div>
+      <p>&copy <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
+      <p>
+        Last Updated:
+        <span id="date-time"></span>
+      </p>
     </footer>
-    <script src=js/script.js></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
