--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <li>
           <a href="lesson3">The Wild River Chamber of Commerce Site Plan</a>
         </li>
-        <li>Lesson 04</li>
+        <li><a href="chamber/index.html">Chamber Home Page Build</a></li>
+
         <li>Lesson 05</li>
         <li>Lesson 06</li>
         <li>Lesson 07</li>
