--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -34,12 +34,17 @@
         </div>
         <h3>Delta</h3>
         <a href="https://www.delta.com/">delta.com</a>
-        <img src="images/repetition.png" alt="picture of a repetition" />
-        <p>
-          Delta is a layout for each page that follows the a similar structure
-          with a header, main content area, and footer. Further reinforcing the
-          sense of repetition and consistency.
-        </p>
+        <div class="photo">
+          <img src="images/repetition.png" alt="picture of a repetition" />
+        </div>
+
+        <div class="description">
+          <p>
+            Delta is a layout for each page that follows the a similar structure
+            with a header, main content area, and footer. Further reinforcing
+            the sense of repetition and consistency.
+          </p>
+        </div>
       </section>
 
       <section>
@@ -48,14 +53,18 @@
         </div>
         <h3>Apple</h3>
         <a href="https://www.apple.com/">apple.com</a>
-        <img src="images/contrast.png" alt="picture for a contrast" />
-        <p>
-          Apple uses a high contrast color scheme with bold white text on a
-          black background, and large images. The layout enhances readability
-          and highlights key information. Additionally, they use different font
-          sizes and styles. It makes it easier to navigate the page and find
-          what they are looking for.
-        </p>
+        <div class="photo">
+          <img src="images/contrast.png" alt="picture for a contrast" />
+        </div>
+        <div class="description">
+          <p>
+            Apple uses a high contrast color scheme with bold white text on a
+            black background, and large images. The layout enhances readability
+            and highlights key information. Additionally, they use different
+            font sizes and styles. It makes it easier to navigate the page and
+            find what they are looking for.
+          </p>
+        </div>
       </section>
 
       <section>
@@ -64,16 +73,22 @@
         </div>
         <h3>Squarespace</h3>
         <a href="https://www.squarespace.com">squarespace.com</a>
-        <img src="images/clean-design.png" alt="picture for a clean design" />
-        <p>
-          The page features a minimalistic and clean design with lots of
-          breathing room between elements, allowing the content to stand out and
-          be easily digestible for the user. they use of a simple color palette,
-          with mainly black and white tones, and a consistent typography style.
-          This design principle helps to create a sense of elegance and
-          sophistication, while also improving the overall user experience by
-          reducing clutter and creating a more visually appealing layout.
-        </p>
+        <div class="photo">
+          <img src="images/clean-design.png" alt="picture for a clean design" />
+        </div>
+
+        <div class="description">
+          <p>
+            The page features a minimalistic and clean design with lots of
+            breathing room between elements, allowing the content to stand out
+            and be easily digestible for the user. they use of a simple color
+            palette, with mainly black and white tones, and a consistent
+            typography style. This design principle helps to create a sense of
+            elegance and sophistication, while also improving the overall user
+            experience by reducing clutter and creating a more visually
+            appealing layout.
+          </p>
+        </div>
       </section>
     </main>
     <footer>
