--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wild River Chamber of Commerce</title>
-    <link rel="stylesheet" href="style/large.css" />
-    <!-- <link rel="stylesheet" href="style/medium.css" /> -->
-    <!-- <link rel="stylesheet" href="style/base.css" /> -->
+    <link rel="stylesheet" href="style/base.css" />
+    <link rel="stylesheet" href="style/medium.css" />
+    <!-- <link rel="stylesheet" href="style/large.css" /> -->
     <meta
       name="description"
       content="This page will be help to built a better networking in the community"
@@ -103,9 +103,9 @@
       </div>
 
       <nav>
-        <!-- <button id="button">&#9776;</button>
-        <ul id="navigation"> -->
-        <ul>
+        <button id="button">&#9776;</button>
+        <ul id="navigation">
+          <!-- <ul> -->
           <li><a href="#">Home</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">News & Events</a></li>
