--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -30,7 +30,7 @@
     </main>
 
     <footer class="design">
-      <p>&copy <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
+      <p>&copy; <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
       <p>
         Last Updated:
         <span id="date-time"></span>
