--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-      <p>&copy <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
+      <p>&copy; <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
       <p>
         Last Updated:
         <span id="date-time"></span>
