--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -100,7 +100,7 @@
     </main>
 
     <footer>
-      <p>&copy <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
+      <p>&copy; <span id="year"></span> .:|:. Erick Patino .:|:. Utah</p>
       <p>
         Last Updated:
         <span id="date-time"></span>
