--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
     <title>Wild River Chamber of Commerce</title>
     <link rel="stylesheet" href="style/base.css" />
     <link rel="stylesheet" href="style/medium.css" />
-    <!-- <link rel="stylesheet" href="style/large.css" /> -->
+    <link rel="stylesheet" href="style/large.css" />
     <meta
       name="description"
       content="This page will be help to built a better networking in the community"
@@ -116,14 +116,56 @@
       <div id="date"></div>
     </header>
     <main>
-      <div class="event">Event</div>
-      <div class="weather">Weather</div>
-      <div class="join">Join</div>
-      <div class="hero">Hero with site name and call to action</div>
-      <div class="news">News Release</div>
+      <div class="event">
+        <h1>Education</h1>
+        <p>Business Sense Workshop: Capitalizing on emerging media trends</p>
+        <p>Friday, July 27, 2023</p>
+      </div>
+      <div class="weather">
+        <picture class="weather-pic">
+          <img src="images/wheather.jpeg" alt="" />
+        </picture>
+      </div>
+      <div class="join">
+        <h1>Join Us!</h1>
+        <p>
+          Discover how to join the chamber of commerce and how it will benefit
+          your organization!
+        </p>
+      </div>
+      <div class="hero">
+        <h1>Welcome to The Wild River Chamber</h1>
+        <button>Join the Chamber</button>
+        <picture class="hero-pic">
+          <img src="images/hero_img.jpeg" alt="" />
+        </picture>
+      </div>
+      <div class="news">
+        <h1>News Release</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vitae
+          et, aut aliquid vel id minus perspiciatis. Pariatur inventore
+          temporibus deserunt dolorum nesciunt ab veritatis labore! Harum
+          aperiam iste enim aut ad fugit cumque tenetur, optio eligendi commodi
+          excepturi debitis porro necessitatibus iusto! Error, dignissimos! Ad
+          quo obcaecati tenetur hic itaque corporis veritatis enim laboriosam
+          vel numquam animi eaque, dolorem impedit nostrum, natus quibusdam ut!
+          Tempore similique dicta nulla aliquid!
+        </p>
+      </div>
       <section class="box">
-        <div class="box1">Spotlight 1</div>
-        <div class="box2">Spotlight 2</div>
+        <div class="box1">
+          <h1>Come Join Us</h1>
+          <picture class="spot1">
+            <img src="images/i9-picture.png" alt="" />
+          </picture>
+        </div>
+        <div class="box2">
+          <h1>Grand Opening</h1>
+          <picture class="spot2">
+            <img src="images/spotlight-2.jpeg" alt="" />
+          </picture>
+        </div>
         <div class="box3">Spotlight 3</div>
       </section>
     </main>
