--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </li>
         <li><a href="chamber/index.html">Chamber Home Page Build</a></li>
 
-        <li>Lesson 05</li>
+        <li><a href="chamber/index.html">Chamber Home Page Continued </a></li>
         <li>Lesson 06</li>
         <li>Lesson 07</li>
         <li>Lesson 08</li>
