--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="images/favicon.ico" />
     <title>Wild River Chamber of Commerce</title>
     <link rel="stylesheet" href="style/base.css" />
     <link rel="stylesheet" href="style/medium.css" />
@@ -135,7 +136,7 @@
       </div>
       <div class="hero">
         <h1>Welcome to The Wild River Chamber</h1>
-        <button>Join the Chamber</button>
+        <button id="banner">Join the Chamber</button>
         <picture class="hero-pic">
           <img src="images/hero_img.jpeg" alt="" />
         </picture>
