--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
     <link rel="stylesheet" href="css/large.css" />
@@ -19,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css" />
+
     <title>Assignment Portal</title>
   </head>
   <body>
@@ -28,7 +29,7 @@
       <h1>Erick Patino</h1>
     </header>
     <main>
-      <section>
+      <section class="box-1">
         <div>
           <h2>Repetition</h2>
         </div>
@@ -47,7 +48,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="box-2">
         <div>
           <h2>Contrast</h2>
         </div>
@@ -67,7 +68,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="box-3">
         <div>
           <h2>White Space and Clean Design</h2>
         </div>
