--- a/chamber/index.html
+++ b/chamber/index.html
@@ -114,7 +114,7 @@
         </ul>
       </nav>
 
-      <div id="date"></div>
+      <p class="date"><span id="date"></span></p>
     </header>
     <main>
       <div class="event">
@@ -123,9 +123,17 @@
         <p>Friday, July 27, 2023</p>
       </div>
       <div class="weather">
-        <picture class="weather-pic">
-          <img src="images/wheather.jpeg" alt="" />
+        <h1>Weather</h1>
+
+        <picture>
+          <img src="images/weather-icon.png" alt=" weather icon" sizes="50vw" />
         </picture>
+        <p class="temp">50° F <span id="temperature"></span></p>
+        <h2>Partly Cloudy</h2>
+        <p class="wind-speed">
+          Wind Speed: 6 Km/h <span id="windSpeed"></span>
+        </p>
+        <p class="wind-chill">Wind Chill: <span id="windChill"></span></p>
       </div>
       <div class="join">
         <h1>Join Us!</h1>
@@ -138,7 +146,11 @@
         <h1>Welcome to The Wild River Chamber</h1>
         <button id="banner">Join the Chamber</button>
         <picture class="hero-pic">
-          <img src="images/hero_img.jpeg" alt="" />
+          <source media="(max-width:400px )" srcset="images/hero-small.jpg" />
+          <source media="(max-width:800px )" srcset="images/hero-medium.jpg" />
+          <source media="(min-width:800px )" srcset="images/hero-large.jpg" />
+
+          <img src="images/hero-regular-img.jpg" alt="hero-image" />
         </picture>
       </div>
       <div class="news">
@@ -194,5 +206,6 @@
       </div>
     </footer>
     <script src="scripts/script.js"></script>
+    <script src="scripts/windchill.js"></script>
   </body>
 </html>
