--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="chamber/index.html">Chamber Home Page Build</a></li>
 
         <li><a href="chamber/index.html">Chamber Home Page Continued </a></li>
-        <li>Lesson 06</li>
+        <li><a href="chamber/index.html">Responsive Design</a></li>
         <li>Lesson 07</li>
         <li>Lesson 08</li>
         <li>Lesson 09</li>
