--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="section_1">
         <div class="logo">
-          <img src="images/logo.png" alt="" />
+          <img src="images/logo.webp" alt="logo" />
         </div>
 
         <div class="name">
