--- a/chamber/index.html
+++ b/chamber/index.html
@@ -109,7 +109,7 @@
           <!-- <ul> -->
           <li><a href="#">Home</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#">News & Events</a></li>
+          <li><a href="directory.html">Directory</a></li>
           <li><a href="#">About Us</a></li>
         </ul>
       </nav>
