--- a/chamber/index.html
+++ b/chamber/index.html
@@ -207,5 +207,6 @@
     </footer>
     <script src="scripts/script.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/directory.js"></script>
   </body>
 </html>
