--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -147,8 +147,8 @@
         </p>
       </div>
     </footer>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/windchill.js"></script>
+    <!-- <script src="scripts/script.js"></script>
+    <script src="scripts/windchill.js"></script> -->
     <script src="scripts/directory.js"></script>
   </body>
 </html>
