--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/favicon.ico" />
     <title>Wild River Chamber of Commerce</title>
+    <link rel="stylesheet" href="style/normalize.css" />
     <link rel="stylesheet" href="style/base.css" />
     <link rel="stylesheet" href="style/medium.css" />
     <link rel="stylesheet" href="style/large.css" />
@@ -107,7 +108,7 @@
         <button id="button">&#9776;</button>
         <ul id="navigation">
           <!-- <ul> -->
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="directory.html">Directory</a></li>
           <li><a href="#">About Us</a></li>
