--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <li><a href="chamber/index.html">Responsive Design</a></li>
         <li>Lesson 07</li>
         <li>Lesson 08</li>
-        <li>Lesson 09</li>
+        <li>
+          <a href="chamber/directory.html">The Business Directory Page</a>
+        </li>
         <li>Lesson 10</li>
         <li>Lesson 11</li>
       </ul>
