--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -117,75 +117,12 @@
 
       <p class="date"><span id="date"></span></p>
     </header>
-    <main>
-      <div class="event">
-        <h1>Education</h1>
-        <p>Business Sense Workshop: Capitalizing on emerging media trends</p>
-        <p>Friday, July 27, 2023</p>
-      </div>
-      <div class="weather">
-        <h1>Weather</h1>
-
-        <picture>
-          <img src="images/weather-icon.png" alt=" weather icon" sizes="50vw" />
-        </picture>
-        <p class="temp">50° F <span id="temperature"></span></p>
-        <h2>Partly Cloudy</h2>
-        <p class="wind-speed">
-          Wind Speed: 6 Km/h <span id="windSpeed"></span>
-        </p>
-        <p class="wind-chill">Wind Chill: <span id="windChill"></span></p>
-      </div>
-      <div class="join">
-        <h1>Join Us!</h1>
-        <p>
-          Discover how to join the chamber of commerce and how it will benefit
-          your organization!
-        </p>
-      </div>
-      <div class="hero">
-        <h1>Welcome to The Wild River Chamber</h1>
-        <div id="banner">
-          🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00
-          p.m.
-        </div>
-
-        <picture class="hero-pic">
-          <source media="(max-width:400px )" srcset="images/hero-small.jpg" />
-          <source media="(max-width:800px )" srcset="images/hero-medium.jpg" />
-          <source media="(min-width:800px )" srcset="images/hero-large.jpg" />
-
-          <img src="images/hero-regular-img.jpg" alt="hero-image" />
-        </picture>
-      </div>
-      <div class="news">
-        <h1>News Release</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vitae
-          et, aut aliquid vel id minus perspiciatis. Pariatur inventore
-          temporibus deserunt dolorum nesciunt ab veritatis labore! Harum
-          aperiam iste enim aut ad fugit cumque tenetur, optio eligendi commodi
-          excepturi debitis porro necessitatibus iusto! Error, dignissimos! Ad
-          quo obcaecati tenetur hic itaque corporis veritatis enim laboriosam
-          vel numquam animi eaque, dolorem impedit nostrum, natus quibusdam ut!
-          Tempore similique dicta nulla aliquid!
-        </p>
-      </div>
-      <section class="box">
-        <div class="box1">
-          <h1>Come Join Us</h1>
-          <picture class="spot1">
-            <img src="images/i9-picture.png" alt="" />
-          </picture>
-        </div>
-        <div class="box2">
-          <h1>Grand Opening</h1>
-          <picture class="spot2">
-            <img src="images/spotlight-2.jpeg" alt="" />
-          </picture>
-        </div>
-        <div class="box3">Spotlight 3</div>
-      </section>
+    <main class="message-box">
+      <h1>Thank You!</h1>
+      <p>
+        Thank you for filling out the form. We appreciate your interest in our
+        membership program.
+      </p>
     </main>
 
     <footer>
@@ -211,7 +148,5 @@
       </div>
     </footer>
     <script src="scripts/script.js"></script>
-    <script src="scripts/banner.js"></script>
-    <script src="scripts/windchill.js"></script>
   </body>
 </html>
