--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -111,7 +111,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="directory.html">Directory</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="join.html">Join</a></li>
         </ul>
       </nav>
 
@@ -149,7 +149,7 @@
       </div>
     </footer>
     <script src="scripts/script.js"></script>
-    <script src="scripts/windchill.js"></script>
     <script src="scripts/directory.js"></script>
+    <script src="scripts/hiddenDate.js"></script>
   </body>
 </html>
