--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="chamber/index.html">Chamber Home Page Continued </a></li>
         <li><a href="chamber/index.html">Responsive Design</a></li>
         <li>Lesson 07</li>
-        <li>Lesson 08</li>
+        <li><a href="chamber/join.html"></a>Join Page</li>
         <li>
           <a href="chamber/directory.html">The Business Directory Page</a>
         </li>
