--- a/lesson10/weather-api.html
+++ b/lesson10/weather-api.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/weatherapi.css" />
-    <title>Wheater API</title>
+    <title>Weather API</title>
   </head>
   <body>
     <div class="weather-box">
