--- a/chamber/index.html
+++ b/chamber/index.html
@@ -125,8 +125,15 @@
       </div>
       <div class="weather">
         <h1>Weather</h1>
+        <p><span id="current-temp"></span> &deg;F</p>
+        <figure>
+          <img src="" alt="" id="weather-icon" />
+          <figcaption></figcaption>
+          <div id="wind-speed"></div>
+          <div id="wind-chill"></div>
+        </figure>
 
-        <picture>
+        <!-- <picture>
           <img src="images/weather-icon.png" alt=" weather icon" sizes="50vw" />
         </picture>
         <p class="temp">50° F <span id="temperature"></span></p>
@@ -134,7 +141,7 @@
         <p class="wind-speed">
           Wind Speed: 6 Km/h <span id="windSpeed"></span>
         </p>
-        <p class="wind-chill">Wind Chill: <span id="windChill"></span></p>
+        <p class="wind-chill">Wind Chill: <span id="windChill"></span></p> -->
       </div>
       <div class="join">
         <h1>Join Us!</h1>
@@ -212,6 +219,6 @@
     </footer>
     <script src="scripts/script.js"></script>
     <script src="scripts/banner.js"></script>
-    <script src="scripts/windchill.js"></script>
+    <script src="scripts/chamber-weatherapi.js"></script>
   </body>
 </html>
