--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li>
           <a href="chamber/directory.html">The Business Directory Page</a>
         </li>
-        <li>Lesson 10</li>
+        <li><a href="chamber/index.html"></a>Using the Weather API</li>
         <li>Lesson 11</li>
       </ul>
       <hr />
