--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <li><a href="chamber/index.html">Chamber Home Page Continued </a></li>
         <li><a href="chamber/index.html">Responsive Design</a></li>
         <li>Lesson 07</li>
-        <li><a href="chamber/join.html"></a>Join Page</li>
+        <li><a href="chamber/join.html">Join Page</a></li>
         <li>
           <a href="chamber/directory.html">The Business Directory Page</a>
         </li>
-        <li><a href="chamber/index.html"></a>Using the Weather API</li>
+        <li><a href="chamber/index.html">Using the Weather API</a></li>
         <li>Lesson 11</li>
       </ul>
       <hr />
