--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="section_1">
         <div class="logo">
-          <img src="images/logo.webp" alt="logo" />
+          <img src="images/new-logo.PNG" alt="logo" />
         </div>
 
         <div class="name">
@@ -109,7 +109,7 @@
         <ul id="navigation">
           <!-- <ul> -->
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="discover.html">Discover</a></li>
           <li><a href="directory.html">Directory</a></li>
           <li><a href="join.html">Join</a></li>
         </ul>
@@ -198,7 +198,7 @@
     <footer>
       <section class="info_box">
         <div class="logo">
-          <img src="images/logo.png" alt="" />
+          <img src="images/new-logo.PNG" alt="" />
         </div>
         <div class="contact">
           <h2>Wild River Chamber</h2>
