--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <li><a href="chamber/index.html">Chamber Home Page Continued </a></li>
         <li><a href="chamber/index.html">Responsive Design</a></li>
-        <li>Lesson 07</li>
+        <li><a href="chamber/discover.html">Discover Page</a></li>
         <li><a href="chamber/join.html">Join Page</a></li>
         <li>
           <a href="chamber/directory.html">The Business Directory Page</a>
